deployments/noteapp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: noteapp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: noteapp
  template:
    metadata:
      labels:
        app: noteapp
    spec:
      containers:
      - name: noteapp
        image: ganeshvenkatasai/noteapp:latest
        ports:
        - containerPort: 7000
---
apiVersion: v1
kind: Service
metadata:
  name: noteapp
spec:
  selector:
    app: noteapp
  ports:
    - protocol: TCP
      port: 7000
      targetPort: 7000
  type: ClusterIP
